--- a/games/Street-Fighter/Six/characters/キャラ対策の基本.md
+++ b/games/Street-Fighter/Six/characters/キャラ対策の基本.md
@@ -4,17 +4,15 @@
 
 ## 各キャラについて知っておくべきこと
 
-1. 確反
-2. ガードしても割り込めない技（有利を取られる、切り返しが届かない、など）
-3. ガードから投げとシミーの択がある技
+1. ガードしても割り込めない技（有利を取られる、切り返しが届かない、など）
+2. 確反
+3. 投げとシミーの択がある攻め
 
 ## 要注意キャラ
 
 以下のキャラは数が多くて強いので特に対策必須。
 
-- ED
 - ザンギエフ
-- キャミィ
 - ベガ
 - ケン
 - 豪鬼
@@ -24,10 +22,12 @@
 
 以下は数は少ないが特殊な対策が必要。
 
+- マノン
 - ガイル
 - ラシード
 - ブランカ
 - ディージェイ
+- キャミィ
 
 ## その他
 
