--- a/games/Street-Fighter/Six/characters/Elena/エレナの対策.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの対策.md
@@ -1,5 +1,13 @@
 ## 差し合い
 
+### 技の選択
+
+まず、強攻撃の空振りからHP(pc)で3600減る。
+空振りするなら弱攻撃か、せめて中攻撃にする。
+
+エレナ側は中足に対してリスクを負わせるのが難しい。
+中足を軸に差し合いしつつ、大足を当てていくのもいい。
+
 ### 差し合いの確反
 
 6HPはガードしても確反がないけど、6HP-HPまで入れたら-11になる。
