--- a/games/Street-Fighter/Six/characters/Elena/エレナの立ち回り.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの立ち回り.md
@@ -35,11 +35,17 @@ MPも発生が早くて長い。
 
 近い時は2LPやMKでとりあえず離すのがいい。
 
-- {立} MP: ヒット確認してMP-MP
-- {立} 2MK: 単発立ちヒット確認してTC
-- 6MK: 単発ヒット確認してTC
-- {立} HP: 単発ヒット確認してTC、火力が出る
+離れたところから6HPでちくちく攻める。
+
 - 6HP: 単発ヒット確認してTC、とにかく長い
+
+中攻撃の距離では、MPを中心に相手の技を潰したりして、動かなくなったら中下段を狙う。
+
+- MP: 判定が強い、TCに行けると尚良い
+- 2MK: 下段、TCに行けると尚良い
+- 6MK: 中段、TCに行けると尚良い
+
+- {立} HP: 単発ヒット確認してTC、火力が出る
 - {C} HK: とにかく長い、パニカンで2HKが入る
 - レオパード: 発生23Fで6HPの倍くらい長い、ガードされて-5だが先端なら離れる
 - J.MK: めくりも狙える
@@ -50,6 +56,7 @@ MPも発生が早くて長い。
 - MP-MP: 発生8F、2MPより長い
 - 2MP: 発生8F
 - 2HK: 発生11F
+- HP: 発生は遅いが、中央でも3600減る
 
 ## 牽制
 
