--- a/games/Street-Fighter/Six/characters/キャラ対策の基本.md
+++ b/games/Street-Fighter/Six/characters/キャラ対策の基本.md
@@ -8,6 +8,9 @@
 2. 確反
 3. 投げとシミーの択がある攻め
 
+ガードしても割り込めない技以外は割り込めるので、ガードから切り返すのに重要。
+できれば確反も覚えておくといいけど、最悪パニカンじゃなくても割り込めたらいい。
+
 ## 要注意キャラ
 
 以下のキャラは数が多くて強いので特に対策必須。
