--- a/games/Street-Fighter/Six/tips/トレーニングモードの使い方.md
+++ b/games/Street-Fighter/Six/tips/トレーニングモードの使い方.md
@@ -1,3 +1,13 @@
+## よく使う反撃設定
+
+よく使う反撃設定は保存しておくといい。
+
+- 何もしない
+- 無敵技
+- 4F技
+- 通常投げ
+- 通常投げ 3Fディレイ
+
 ## おすすめの設定
 
 - 画面表示設定 > フレームメーター: ON
@@ -31,6 +41,7 @@
 左を押しながらリセット: 左端で開始
 右を押しながらリセット: 右端で開始
 下を押しながらリセット: 中央で開始
+上を押しながらリセット: 中央逆サイドで開始
 
 ## 簡単練習設定
 
