--- a/games/Street-Fighter/Six/characters/Elena/エレナの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの練習メニュー.md
@@ -26,11 +26,25 @@
 
 ## 確反
 
-（確定反撃の練習）
+（反撃設定 > ダウンリバーサル: 通常投げ）
+（反撃設定 > ダウンリバーサル: 無敵技）
+（反撃設定 > ダウンリバーサル: 何もしない
 
 - HP(pc)-HP, DR 2MP, 中スピン-Sハーベスト, 弱ホーン, SA3
 - HP(pc)-HP, DR 2MP, 中スピン-Sハーベスト, 弱ホーン, 中リンク, ガード
 - {端} HP(pc)-HP, DR 2MP, 中スピン-Sハーベスト, 弱ホーン, 中昇竜, LK, 後退
+
+## ジャンプ攻撃からのコンボ
+
+（ガード: ランダム）
+（反撃設定 > ダウンリバーサル: 無敵技）
+（反撃設定 > ダウンリバーサル: 何もしない）
+
+- J.HK, 2MP, ODグライド-6P, J.HK, ...
+- J.HK(g), 2MP, 弱グライド, ガード
+- J.HK, ガード, {無敵技}, HP(pc), ...
+
+ODグライド-6Pの後は中央でも詐欺飛びを狙える。
 
 ## 端の詐欺飛び
 
@@ -41,7 +55,7 @@
 - {端} J.HK, MK-HK, 弱グライド-6P, J.HK, ...
 - {端} J.HK(g), MK-HK, 弱グライド-6P, J.HK, ...
 - {端} J.HK(g), MK-HK(g), 弱グライド, ガード
-- {端} J.HK, ガード, {無敵技}, (確反)
+- {端} J.HK, ガード, {無敵技}, HP(pc), ...
 
 弱グライド単発ヒット確認もできるので、できるなら頑張る。
 MK-HK(g), 弱グライドは4F技で割り込まれるので、ガードされた時はできればMK, 弱グライドにすると割り込まれない。
