--- a/games/Street-Fighter/Six/characters/Elena/エレナの攻めの状況.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの攻めの状況.md
@@ -34,15 +34,18 @@
 相手が投げ抜けしてくるようなら中リンクも併用して投げ抜けを狩るといい。
 エレナは差し合いが強いので、中央で無理に攻める必要はない。
 
+- 強リンク: その場受け身に+2、後方受け身にはMPの距離
+  - {その場受け身/端} 2LP, 2LP
+  - {その場受け身/端} 2LK, 2LP, 2LP
+  - {その場受け身/端} 通常投げ
+  - {後方受け身} ガード
+- 中リンク, ガード: その場受け身でも投げ間合いの外で+4
 - {端} HP: +5
 - {端} HP, 後退: シミー
 - {端} J.HK: 7F詐欺
 - 弱/中リンク-Sレオパード: ガードされても+1
 - 中リンク-Sハーベスト: ガードされて-4だが後方受け身なら遠い、4F技とは相打ちでMKが入る
 - 中リンク-Sマレット: 中段
-- 強リンク, ガード: その場受け身に+2
-  - 通常投げ: その場受け身に通常投げ狙い、後方受け身に様子見
-- 中リンク, ガード: その場受け身でも投げ間合いの外
 
 端のHPフレーム消費は6HP-HP-HPの時点で相手が端に背をつけているくらいで使える。
 
