--- a/games/Street-Fighter/Six/characters/Elena/エレナの対策.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの対策.md
@@ -47,6 +47,9 @@
 
 スピンサイスは2,2で攻撃する2周目はしゃがみに当たらなくて、強派生が下段無敵なので、発生9F以内のしゃがみの上段技で確反を入れるといい。
 
+エレナのスライディングは先端-2なので、SA3があったら確反に注意。それ以外でも基本的には4F技を2回刻んでヒット確認した方がいい。
+インパクトもほぼ効かないと思った方がいい。ボタン押してから15Fでインパクトしても返される。見てからでは無理。
+
 ### 受け身ポイント
 
 6HP-HP-HPはその場受け身すると投げとシミーの択があるので絶対に後方受け身を取らないといけない。
