--- a/games/Street-Fighter/Six/characters/Elena/エレナの攻めの状況.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの攻めの状況.md
@@ -28,6 +28,11 @@
 6HP-HP-HPとほぼ同じ。
 ただ、強リンクが+1なのでその場受け身に投げが弱い。様子見中心。
 
+端では中昇竜で追撃した方がいい。
+
+- ステップ, 前進, {その場受け身}, 通常投げ: 目押しで重ねる
+- ステップ, 前進, {その場受け身}, 後退: シミー
+
 ## 6HP-HP-HP: 40
 
 中央なら、まずは強リンクで様子見して、相手が受け身を取らなかったら投げを狙う。
@@ -52,6 +57,11 @@
 弱リンク-Sマレットの方が発生は早いけど、距離によっては当て投げが届かないのでちょっと弱い。
 
 ## 2HK: 31
+
+先端に当たると32になることがある。
+フレーム的にはラッシュ中下段のフレームだけど、先端だとDR 6MK, MKが届かない。
+
+- ステップ, MP(+4)
 
 ## 2HK(pc): 46
 
