--- a/games/Street-Fighter/Six/characters/Elena/エレナの攻めの状況.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの攻めの状況.md
@@ -96,10 +96,12 @@
 
 中央では後方受け身に何もできない。
 
+端でもあまり強くないので、インパクト以外は無理して攻めなくてもいい。
+
+- DI: 無敵技やインパクト以外で割り込めない
 - DR 2LK, ガード: 投げ間合いの外で-2 (2LPだとMP(pc), MKが届かない)
 - DR HP(+2): ヒットで+8、ガードで+4
 - DR 前投げ: 少し長めに走らないと届かない
-- DI: 無敵技やインパクト以外で割り込めない
 - DR 2LK: 目押しで重ねる
 - DR 2MK: 目押しで重ねる
 - DR 6MK: 7F遅れ
