--- a/games/Street-Fighter/Six/characters/Elena/エレナの特徴.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの特徴.md
@@ -31,9 +31,9 @@
 - 2MK-HK: -9、しゃがみガードに当たらない (キャンセル可)
 - 2HP: -7
 - 2HK: -11
-- 3HK: -10、先端で-2、6HPガード後の距離で-4くらい
+- {C} 3HK: -10、先端で-2、6HPガード後の距離で-4くらい
 - 6HP: -4
-- 6HK: -4
+- 6HP-HP: -11、最後まで出し切って-16（連続ガード）
 - 昇竜: -24以上
 - スピン: -10以上、しゃがみガードに当たらない
 - ホーン: -9以上、しゃがみガードに当たらない
