--- a/games/Street-Fighter/Six/characters/Elena/エレナの立ち回り.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの立ち回り.md
@@ -53,10 +53,11 @@ MPも発生が早くて長い。
 
 ## 差し返し
 
+基本的にはMPで、相手が隙の多い技を振ってくるならHPが一番。
+
 - MP-MP: 発生8F、2MPより長い
-- 2MP: 発生8F
-- 2HK: 発生11F
-- HP: 発生は遅いが、中央でも3600減る
+- HP: 発生12F、中央でも3600減る
+- 2HK: 発生11F、遠めの確反とか
 
 ## 牽制
 
