--- a/games/Street-Fighter/Six/system/モダン操作の特徴.md
+++ b/games/Street-Fighter/Six/system/モダン操作の特徴.md
@@ -94,3 +94,5 @@ JP、ザンギ、ダルシム、春麗、などはいまいち。
 AC3からSA1にもいけるキャラはわりとアシコンが優秀と言える。
 
 モダンに炊いたことってマジで一回もないんだけど、一般的にはどこで炊くんだろ。
+
+モダンはモダンで入力は簡単だけど、操作という意味では意外と難しい。特にアシストボタンを押したり外したりするので、複雑になるほど混乱しやすい。
