--- a/games/Street-Fighter/Six/tips/モダンかクラシックか.md
+++ b/games/Street-Fighter/Six/tips/モダンかクラシックか.md
@@ -2,3 +2,6 @@
 ただ、キャラによっては明らかにモダンが弱いキャラもいる。豪鬼とかガイルとか。特に中段がないとか発生の早い技がないとか立ち回りで困るキャラは厳しい。
 
 ルーク、ラシード、ベガ、リリー、本田、ジュリ、キンバリー、あたりはモダンでも全然困らない。技が欠けていてもあまり影響しない。
+
+モダンとクラシックは別のキャラとして考える。
+「クラシックにはこれがあるのに」よりも「モダンだからこの試合が取れた」を増やしていかないといけない。モダンを使うならモダンの強みを全力で生かす。
