--- a/shared/human/body/muscle/筋肉を動かす.md
+++ b/shared/human/body/muscle/筋肉を動かす.md
@@ -8,3 +8,5 @@
 足を閉じて尻に力を入れた方が体幹に力を入れやすい。
 
 筋肉は一度力を抜いてから力を入れる方が瞬発的に動きやすい。
+
+筋肉を動かす時、最初は勢いをつけて動かしていい。というかそうしないと動かない。ただ、勢いをつけると痛めやすいので慎重に少しずつ鍛える。効率的に鍛えるのは勢いをつけなくても動かせるようになってからでいい。
