--- a/shared/finance/assets/土地.md
+++ b/shared/finance/assets/土地.md
@@ -10,3 +10,8 @@
 
 関東の一軒家なら20-30坪くらいが平均。
 国分寺市とか120万円/坪でも20坪買うと2400万円になるので、なかなか手に入る資産ではない。
+
+君主というのは最後にその土地の所有権を奪った人なので、それ以外が真に土地を手に入れるにはクーデターするしかない。
+土地を買った人というのは結局地税を払っていて、君主から借りているだけ。
+
+君主や領主というのは結局地主でしかない。
