--- a/shared/voice/training/tips/喉を下げる.md
+++ b/shared/voice/training/tips/喉を下げる.md
@@ -175,3 +175,5 @@ https://youtube.com/watch?v=qXy2Sq8KmJA&si=0HkdEqvTfdu2eCTI
 声域が狭いと息を強くして無理やり出すために不安定になりやすい。声量も抑えにくい。喉も締まりやすい。
 
 喉を下げるというよりは、顎と喉を離すような感覚かも。喉をとにかく下げようとすると顎や舌で下げようとしがち。
+
+喉を下げると声が低くなって暗く重くなりがち。明るく軽い声も意識して出せるようにしたい。
