--- a/games/Street-Fighter/Six/characters/Elena/エレナの攻めの状況.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの攻めの状況.md
@@ -1,3 +1,10 @@
+## 特に重要な状況
+
+- 6HP-HP-HP
+- スピン-リンク
+- {空} DR 2MP, 中スピン-Sハーベスト, 弱ホーン: 確反、インパクト系で頻出
+- {端} 中昇竜: 端のコンボの〆で頻出
+
 ## MK-HK, 中スピン-リンク-リンク: 10
 
 2回転がる。
