--- a/games/Street-Fighter/Six/tips/トレーニングモードの使い方.md
+++ b/games/Street-Fighter/Six/tips/トレーニングモードの使い方.md
@@ -57,6 +57,13 @@
 
 ON/OFFすると投げ抜けだけでなくジャストパリィやファジーの練習にも使える。
 
+## リプレイ機能
+
+アップデートでリプレイの途中からプレイヤー操作できるようになった。
+
+トレモのリプレイ機能は、まずリーサルのやり直しに使うのが簡単で役に立つ。できるはずのリーサルを逃したらリプレイに戻って練習する。
+慣れてきたら、リーサルがあったかどうかわからない状況のリーサルを研究するのもいい。空中ヒットとか、限定的な状況のは特に。
+
 ## その他
 
 簡単練習設定は便利。
