--- a/shared/information/無知.md
+++ b/shared/information/無知.md
@@ -14,3 +14,6 @@
 それで失敗しても当たり前のことでしかない。
 
 「わからない」とか「知らない」でマウントをとってくる狂人がたまにいる。「私の方が知らない！」って平気で言ってくる。意味不明。
+
+知らないことに気づくには、常識や偏見に気づくのが大事。
+たとえば「赤ちゃんの肌にも使える石鹸」と聞いたら、「赤ちゃんと大人の肌ってどっちが強いの？」と考える。「赤ちゃんは弱い」という偏見に気づく。
