--- a/shared/voice/training/tips/声を柔らかくする.md
+++ b/shared/voice/training/tips/声を柔らかくする.md
@@ -26,6 +26,8 @@ https://youtube.com/watch?v=bU1s_6IRkHg&si=PxXikenoXx3tjMBh
 
 声を柔らかくするのに息を漏らさなくても、喉を下げれば声は柔らかくなる。
 
+喉が下がって深い声なら強い声でも柔らかくなる。
+
 ## 硬くする
 
 硬い声を出す時は息を弱めないと喉を痛める。
@@ -41,3 +43,6 @@ https://youtube.com/watch?v=bU1s_6IRkHg&si=PxXikenoXx3tjMBh
 
 声が硬いというのは、響きが少ないということ。
 キーンとした機械的な声になる。
+
+喉に力を入れると声が硬くなりやすい。
+喉の力を抜いて、首や胸の筋肉で喉を下げて音程を変える。
