--- a/shared/voice/training/tips/滑舌を改善する.md
+++ b/shared/voice/training/tips/滑舌を改善する.md
@@ -37,3 +37,6 @@ https://youtube.com/watch?v=fzZxEy3ir6k&si=RWC5c4Yzkazcpfev
 滑舌以前にまず正しく声を出すこと。それができてないのに滑舌のことを考えても仕方ない。どうせ正しい声の出し方に変えていくと口の動かし方もそれに合わせないといけない。
 
 「グリコ」や「グーチョキパー」は発音しにくい。唇や舌を動かす練習になる。
+
+滑舌以前に歌詞がうろ覚えすぎる説もある。
+歌詞を覚えて舌や唇の運びに慣れたら滑舌も良くなる。
