--- a/games/Street-Fighter/Six/characters/Elena/エレナの対策.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの対策.md
@@ -1,5 +1,9 @@
 ## 差し合い
 
+### 差し合いの距離
+
+エレナ戦は近くで戦った方がいいかも。6HPをブンブン振られる方が嫌。中足の距離に入ると技の発生が遅くて潰しやすい。
+
 ### 技の選択
 
 まず、強攻撃の空振りからHP(pc)で3600減る。
@@ -53,3 +57,8 @@
 ### 受け身ポイント
 
 6HP-HP-HPはその場受け身すると投げとシミーの択があるので絶対に後方受け身を取らないといけない。
+
+## ミラーマッチ
+
+エレナ同キャラはMPを多めに振っていくべきかも。あと6HPを6HPで差し返せる。HPで行けるならHPで。
+こっちからMPとか2MKで触りにいく感じかも。ただ、同キャラだとこっちも技の発生が遅い。
