--- a/games/Street-Fighter/Six/characters/Elena/エレナの立ち回り.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの立ち回り.md
@@ -4,6 +4,8 @@
 長くて、2000減って、相手が受け身を取れないと状況もいい。
 ただ、発生前は結構判定が前に出るので注意。
 
+6HPに対して持続の長い技を置いてくる場合、MPやHPで差し返すとリターンが大きい。
+
 基本的には下がりながら、前に出てくる相手に6HPや2MPラッシュを狙う。
 
 MPも発生が早くて長い。
