--- a/shared/voice/training/tips/声を出す.md
+++ b/shared/voice/training/tips/声を出す.md
@@ -250,3 +250,7 @@ https://youtu.be/OEjipkH95_0?si=9RxpD90fqQnpNSXy
 結局内側の腹筋が弱いと息を持ち上げられないので、息が吐けない。息の支えに対抗できない。まず息を吐く方を鍛える。
 
 閉じた声帯を少しだけ広げるように声を出す。声帯を閉じるように声を出すと喉が締まる。
+
+息を吸うように声を出す。
+特に喉の奥は広げて、いつでも息を吸えるようにする。なんなら吐いて吸うを繰り返して練習する。感覚としてはずっと息を吸ったまま、腹筋で吐く。
+特に、横隔膜を下げる力は抜かずに、腹筋だけ力を抜くと勝手に息が入ってくるようにする。
