--- a/games/Street-Fighter/Six/characters/DeeJay/ディージェイの対策.md
+++ b/games/Street-Fighter/Six/characters/DeeJay/ディージェイの対策.md
@@ -1,5 +1,14 @@
+## 差し合い
+
 思い切ってインパクトで割り込むのは大事。
 ソバット、ジョスクールの派生、中足、大足、など、ディージェイの連携にはキャンセルできない技が多い。
+
+ディージェイは溜めがないと対空が難しいので、立ったら跳ぶのはあり。
+
+溜めがないと近めの対空が弱い。
+ジャンプ攻撃が届かない距離のジャンプなら2HKがあるけど、近距離は4HKしかない。判定が弱いし当たる範囲も狭い。
+
+## 飛び道具への対処
 
 エアスラは弱でフェイントをかけられるので、インパクトを狙うのは危険。
 ただ、リターンは大きいのでありっちゃあり。
@@ -7,11 +16,12 @@
 強エアスラは全体60Fでかなり遅めのジャンプ攻撃でも確定する。
 弱でフェイントをかけられてもジャックナイフを溜めるにはギリギリのタイミング。インパクトよりもジャンプを狙いたい。
 
+## 対空
+
 ニーショットは通常技対空でもわりと安定して落とせる。
 
-ディージェイがしゃがんだら中足かソバットが来るのでインパクトを置くといい。
+## その他
 
-ディージェイは投げに垂直飛びを合わせられるのがきつい。
+うろうろしているディージェイがしゃがんだら中足かソバットが来るのでインパクトを置くといい。
 
-溜めがないと近めの対空が弱い。
-ジャンプ攻撃が届かない距離のジャンプなら2HKがあるけど、近距離は4HKしかない。判定が弱いし当たる範囲も狭い。
+ディージェイは投げに垂直飛びを合わせられるのがきつい。対空しづらい。投げを読んだら垂直飛びから下に強いジャンプ攻撃。
