--- a/games/Street-Fighter/Six/characters/Elena/エレナのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナのコンボ.md
@@ -377,3 +377,5 @@ MK-HK, ODホーンはすっぽ抜けるので注意。
 HP(pc)-HP, DR 2HP, 強スピンみたいに浮いているとDR 2MPでも拾えないので、そっちは中央なら2MP、端なら2HPから中スピン-Sハーベストにするといい。
 
 体力が9割を切っていてリーサル以外ならヒーリングはほぼ出し得。
+
+立っている相手にはMPMPや2MKHKから弱グライドまで入れ込みでもいい。
