--- a/games/Street-Fighter/Six/characters/Elena/エレナの対策.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの対策.md
@@ -1,4 +1,13 @@
+## 概要
+
+エレナはインパクトや確反の火力が高いので、丁寧に戦うのが大事。
+投げは受け入れて、無理に無敵技やインパクトで暴れない。暴れるならDリバか投げ抜けかジャンプの方がマシ。
+
 ## 差し合い
+
+### 差し合いの概要
+
+しゃがみ攻撃への差し返しが弱い。2MKはキャンセルできないし、立ってないと派生も空振りになる。
 
 ### 差し合いの距離
 
@@ -46,6 +55,8 @@
 
 ラッシュ中段ガード後は遠いのでエレナのコパコパも届かない。
 6F技のMKを繋いでくるはずなので、体力があるなら4F技で暴れて喰らい逃げしてもいい。
+
+エレナはガードからコパコパが届かないことが多くて攻め継続が難しい。無理して暴れるよりはしっかりガードして離れるのを待つ。
 
 ### 確反
 
