--- a/games/Street-Fighter/Six/characters/Elena/エレナの攻めの状況.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの攻めの状況.md
@@ -135,6 +135,8 @@
   - 2LK, 2LP: 4F技と相打ちで-1くらい
   - 前投げ: 4F技に負ける
 - 弱リンク-HK(+2): ヒットで+4、ガードは-1で投げ間合いか後方受け身なら外
+- {端} 弱リンク, 2MK
+- {端} 中リンク, 通常投げ
 - 弱リンク-Sレオパード/Sハーベスト, ...
 - ステップ, DR MK(+3), 2HP
 
@@ -186,7 +188,7 @@
   - 2MP, 弱グライド
   - 2MK: 4F技と相打ちになるが、一部キャラには相打ちから2MPが入る
 - 弱リンク-Sレオパード
-- 弱リンク-Sハーベスト:
+- 弱リンク-Sハーベスト
 
 ## 強スピン: 52
 
@@ -290,6 +292,8 @@ Sマレット(g)と基本的に同じでいい。
 
 - 弱リンク-HK(+2)
 - 弱リンクS-LK
+- {端} 弱リンク, 2MK
+- {端} 中リンク, 通常投げ
 
 ## MK-HK, 弱ホーン: 40
 
