--- a/games/Street-Fighter/Six/characters/Elena/エレナの攻めの選択肢.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの攻めの選択肢.md
@@ -32,6 +32,15 @@ Sレオパードの後とか。
 
 MK, 2LPが届かない状況とかで入れ込み。
 
+## MK-HK: 2-8
+
+- MK-HK, 強ホーン
+- {端} MK-HK, 弱グライド-6P
+- MK(g)-HK, 弱グライド
+
+中央ではガードされた時しか弱グライドが届かない。
+端ではヒットでもガードでも弱グライドまで出していい。
+
 ## {端} MK-HK, 弱グライド: 2-8
 
 ガードされるとHKと弱グライドの間に4F隙がある。
@@ -76,6 +85,12 @@ DR MK(+3)がヒットするとHP-HPも入る。
 
 単発ヒット確認でさらに起き攻めを狙う。
 ガードされて五分のMKの外。エレナの技が届くのは8Fからなのでキャラによっては微妙な距離。
+
+## {端} DI: 25-26
+
+- {端} 前投げ
+- {端} 中昇竜
+- {端} ホーン, 2LP
 
 ## DR 6MK: 28-32
 
