--- a/games/Street-Fighter/Six/characters/Elena/エレナの確反.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの確反.md
@@ -1,5 +1,10 @@
 # 確反
 
+## 概要
+
+HP(pc)が狙えるならできるだけ狙う。
+間に合わなくても-2だし、ヒットストップが長いのでパニカン確認でHP-HPにするのも簡単。
+
 ## 6F
 
 MKが届くならMK-HKルートか、MK, 2HPルート。主にDリバの確反。
