--- a/games/Street-Fighter/Six/characters/Elena/エレナの攻めの状況.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの攻めの状況.md
@@ -163,7 +163,7 @@
 
 ## 弱スピン: 34
 
-リンクシンクでキャンセルして攻め継続した方が良い。ダメージも200-300くらいしか変わらない。
+リンクシンクでキャンセルして攻め継続した方が良い。ダメージも200-300くらいしか変わらない。インパクトには注意。
 
 リンクシンクが出なかったらとりあえずステップしてDR MKとかで触るか、諦める。
 
