--- a/shared/study/勉強不要説.md
+++ b/shared/study/勉強不要説.md
@@ -13,3 +13,5 @@
 勉強する行為自体も重要。何かを学ぶ姿勢を学んでいる。その中で、学べない人もいるし、教えられない教師もいるのは問題。
 
 「勉強できて得することはあまりないかもですけど、できなくて困る事はいずれ沢山出てきますから...」（『秘密法人デスメイカー』）
+
+「ドイツ人は日本人の3倍休んで成果を出す」みたいな本に「は？年間休日120日と考えても3倍休んだら360日なんだが？」とパッと思えるのが算数の基礎力。
