--- a/games/Street-Fighter/Six/characters/Elena/エレナの攻めの状況.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの攻めの状況.md
@@ -126,24 +126,37 @@
 ## グライド-6P: 39
 
 中央でもわりと近くに落ちる。
+ステップからの攻めが多彩。
 
+端では2MP, 弱グライドよりもMK-HK, 弱グライドを狙いたい。
+
+- ステップ
+  - 前進, 前投げ
+  - 前進, 後退: シミー
+  - 6MK: 中段
+  - 前進, 2LK, 2LP: 下段
+  - DR MK(+3), 2HP
 - 弱リンク:
   - MP(+3): ガードでも+1、その場受け身にはMKが入る、カウンターなら後方受け身でもMP-MPか2MPが入る
+  - マレット(+2): 中段、ヒットで+4、ガードは-1で投げ間合いか後方受け身なら外
+  - 2MK: 下段、単発立ち確認が必要
   - 後退: その場受け身でもシミー、後方受け身は遠い
+  - Sレオパード/Sハーベスト: 暴れ潰し
 - 強リンク: +1
   - 2LP, 2LP
   - 2LK, 2LP: 4F技と相打ちで-1くらい
   - 前投げ: 4F技に負ける
-- 弱リンク-HK(+2): ヒットで+4、ガードは-1で投げ間合いか後方受け身なら外
-- {端} 弱リンク, 2MK
-- {端} 中リンク, 通常投げ
-- 弱リンク-Sレオパード/Sハーベスト, ...
-- ステップ, DR MK(+3), 2HP
+- {端} HP: +4
+  - 前投げ
+  - 後退: シミー
 
 ## ODグライド-6P: 42
 
 - J.HK: 中央でも両受け身に詐欺飛びになる
 - 強リンク-マレット(+2): ヒットで+4
+- {端} 2HP: +4
+  - 前投げ
+  - 後退: シミー
 
 中央の詐欺飛びは後方受け身だと遠いので、コンボは2MPとか。
 
