--- a/games/Street-Fighter/Six/characters/Elena/エレナの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの練習メニュー.md
@@ -41,8 +41,8 @@
 （反撃設定 > ダウンリバーサル: 何もしない）
 
 - J.HK, 2MP, ODグライド-6P, J.HK, ...
+  - {無敵技}, HP(pc), ...
 - J.HK(g), 2MP, 弱グライド, ガード
-- J.HK, ガード, {無敵技}, HP(pc), ...
 
 ODグライド-6Pの後は中央でも詐欺飛びを狙える。
 
@@ -53,12 +53,13 @@ ODグライド-6Pの後は中央でも詐欺飛びを狙える。
 （反撃設定 > ダウンリバーサル: 何もしない）
 
 - {端} J.HK, MK-HK, 弱グライド-6P, J.HK, ...
+  - {無敵技}, HP(pc), ...
 - {端} J.HK(g), MK-HK, 弱グライド-6P, J.HK, ...
+  - {無敵技}, HP(pc), ...
 - {端} J.HK(g), MK-HK(g), 弱グライド, ガード
-- {端} J.HK, ガード, {無敵技}, HP(pc), ...
 
 弱グライド単発ヒット確認もできるので、できるなら頑張る。
-MK-HK(g), 弱グライドは4F技で割り込まれるので、ガードされた時はできればMK, 弱グライドにすると割り込まれない。
+MK-HK(g), 弱グライドは4F技で割り込まれるので、J.HKをガードされた時はできればMK, 弱グライドにすると割り込まれない。
 
 ## インパクト返し
 
