--- a/games/Street-Fighter/Six/characters/Elena/エレナの対策.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの対策.md
@@ -33,7 +33,7 @@
 
 スピンから中段補正ギリがくるので、できれば止める。ガードでも投げとシミーの択が来る。
 
-### リンクシンク対策
+### スピン-リンクの凌ぎ方
 
 特に注意するポイントとしては、スピンサイスからキャンセルしてくるパターン。
 特に弱はほとんどキャンセルしてくると思っていい。スピンサイスを食らったら無敵技で暴れるか、タイミングよくコパンで暴れる。最速で暴れると弱/中派生に負けるので注意。中段だけは食らわないようにする。相手が様子見する場合は-3なので、無敵技の確反が嫌なら遅らせコパンしかない。
@@ -42,8 +42,8 @@
 
 強派生には読み合いでリスクを取って、コンボを狙う手もある。コパンで暴れるより簡単だしこっちの方がいいかも。
 
-スピンリンクにはインパクトが定石。
-まずインパクトを見せると、エレナ側も慎重になる。
+スピンリンクにはまずインパクトを見せると、エレナ側も慎重になる。
+見てからでは返されるので、スピンサイスを見たらとにかくインパクトを連打しておく。一度インパクトを見せてからが読み合い。
 
 ### 割り込みポイント
 
