--- a/games/Street-Fighter/Six/characters/Elena/エレナの攻めの状況.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの攻めの状況.md
@@ -162,9 +162,11 @@
 
 ## スピン-リンク: -3
 
-- Sマレット
+- Sマレット: 11F遅れ
 - Sレオパード/Sハーベスト
 - ガード: -3 (無敵技やインパクト読み)
+- 前投げ: 8F遅れ、パリィやインパクトしてくる相手への対策
+- 2LK: 7F遅れ
 
 まずはマレットから。
 相手が暴れても空中判定で軽く済むことが多いし。
