--- a/games/Street-Fighter/Six/characters/Elena/エレナの攻めの状況.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの攻めの状況.md
@@ -162,8 +162,8 @@
 
 ## スピン-リンク: -3
 
-- Sマレット: 11F遅れ
-- Sレオパード/Sハーベスト
+- Sマレット: 14F遅れ、4F技でも空中食らい
+- Sレオパード/Sハーベスト: 暴れ潰し
 - ガード: -3 (無敵技やインパクト読み)
 - 前投げ: 8F遅れ、パリィやインパクトしてくる相手への対策
 - 2LK: 7F遅れ
