--- a/games/Street-Fighter/Six/characters/Elena/エレナのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナのコンボ.md
@@ -65,6 +65,14 @@
 - MP-MP, SA1, 強昇竜: 2960
 - MP-MP, ODホーン, SA1, 強昇竜: 3280
 - MP-MP, ODホーン, SA1, OD昇竜: 3340
+- MP-MP, ODホーン, SA2: 3640
+- MP-MP, 中ホーン, SA3: 3960
+- MP-MP, ODスピン, DR 2MP, 強ホーン, SA3: 4652
+- MP-MP, CR MK, 2HP, 強スピン, DR 2MP, 強ホーン, SA3: 3953
+
+中央のノーゲージは弱グライドが使いやすい。
+モダンは少し安いけど、状況がいいし、立ち確認だけでいいし。
+ホーンや昇竜は起き攻めが弱いし、スピン-リンクは火力が低すぎる。
 
 ## 2MP, ODグライド
 
