--- a/games/Street-Fighter/Six/characters/Elena/エレナの攻めの状況.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの攻めの状況.md
@@ -5,6 +5,14 @@
 - {空} DR 2MP, 中スピン-Sハーベスト, 弱ホーン: 確反、インパクト系で頻出
 - {端} 中昇竜: 端のコンボの〆で頻出
 
+## {端} +39
+
+- {端} HP: +4
+  - 前投げ
+  - 後退: シミー
+  - 2LK, 2LP
+  - MK, 2LP
+
 ## MK-HK, 中スピン-リンク-リンク: 10
 
 2回転がる。
@@ -18,6 +26,8 @@
 - DR 6MK, MK
 - DR 2MK: 目押し
 - DR 投げ: 目押し
+- ステップ, MP(+2): ヒットで+5、ガードで-1、カウンターでMKが入る、相手がしゃがみ攻撃を最速で出さなければ立ち状態
+- ステップ, 2MK(+1)-HK: 単発ヒット確認が必要
 
 ## HP-HP, ODホーン: 42
 
@@ -146,6 +156,8 @@
   - 2LP, 2LP
   - 2LK, 2LP: 4F技と相打ちで-1くらい
   - 前投げ: 4F技に負ける
+- J.HK, 2MP, 弱グライド: 8F詐欺
+- 前J: 4F詐欺
 - {端} HP: +4
   - 前投げ
   - 後退: シミー
