--- a/games/Street-Fighter/Six/characters/Elena/エレナの対策.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの対策.md
@@ -33,6 +33,8 @@
 
 スピンから中段補正ギリがくるので、できれば止める。ガードでも投げとシミーの択が来る。
 
+Sレオパードの後は後ろ歩きで小足も投げも最小限のダメージで避けられる。
+
 ### スピン-リンクの凌ぎ方
 
 特に注意するポイントとしては、スピンサイスからキャンセルしてくるパターン。
