--- a/games/Street-Fighter/Six/characters/Elena/エレナの攻めの状況.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの攻めの状況.md
@@ -254,14 +254,13 @@
 
 ## Sレオパード(g): 1
 
-スピンからもリンクに派生できる。
+フレーム的には微有利だけど、相手が後退すると投げもコアコパも空振りするのでかなり弱い。
 
-+1があんま強くない。ガードのとき2LP, 2LPが届かない。
-とりあえず2LPで触って、ヒット確認で2LPスピンかLK昇竜かな。
-
-- 2LP: ヒット確認してLK, 弱ホーンだが立ちヒット確認が必要
-- 2LK, 2LP: 4F技と相打ちで五分くらい
-- 投げ: 4F技に負ける
+- MK, 弱グライド: 5F遅れ
+- 2LP, 弱グライド: 2LP(g), 弱グライドだと間が11F、2LPがヒットすると無敵技以外で割り込めない
+- 後退: シミー
+- 2LP, 2LP: ガードされると届かない
+- MK-HK, 弱グライド: 中央ではガードされないと届かない
 
 ## Sマレット: 4
 
