--- a/games/Street-Fighter/Six/characters/Elena/エレナの攻めの選択肢.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの攻めの選択肢.md
@@ -1,7 +1,17 @@
-## 2LP, 2LP: 1
+## 弱攻撃をガードされた場合の読み合い
 
-ガードだと2度目の2LPが届かないことも結構ある。
-Sレオパードの後とか。
+ど密着なら3回、密着なら2回まで刻める。
+Sレオパード(g)は密着じゃないので1回しか刻めない。
+
+- 弱グライド: キャンセルなら弱攻撃や短い中攻撃、キャンセルなしなら中攻撃を避けて当たる、ガードされても-3
+- MK: 7F遅れ、短い暴れや発生の遅い技を潰す、CR MKを仕込むのもいい
+- ガード: 様子見
+- 遅らせHP: 届いてない置きに対して最大リターン
+- 弱スピン: 中攻撃以上を潰す、ガードされて-11でかなりリスクがある
+
+弱グライドには強攻撃が噛み合うけど、弱スピンやMKで潰せる。ただ、弱スピンはかなりリスクがある。
+
+リュウの2MPでも遠めのMKに届かなくて相打ちになるので、
 
 ## 2LP, 2LK, 2LP: 1
 
