--- a/games/Street-Fighter/Six/characters/Elena/エレナの攻めの状況.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの攻めの状況.md
@@ -24,7 +24,8 @@
 ## 6MK-MK: 29
 
 - DR 6MK, MK
-- DR 2MK: 目押し
+- ## DR 2MK: 目押し
+  - ガード
 - DR 投げ: 目押し
 - ステップ, MP(+2): ヒットで+5、ガードで-1、カウンターでMKが入る、相手がしゃがみ攻撃を最速で出さなければ立ち状態
 - ステップ, 2MK(+1)-HK: 単発ヒット確認が必要
@@ -60,7 +61,8 @@
   - {その場受け身/端} 2LP, 2LP
   - {その場受け身/端} 2LK, 2LP, 2LP
   - {その場受け身/端} 通常投げ
-  - {後方受け身} ガード
+  - {後方受け身} 6HP: 短い技を潰す
+  - {後方受け身} {強攻撃や無敵技}, HP: 差し返し
 - 中リンク, ガード: その場受け身でも投げ間合いの外で+4
 - {端} HP: +5
 - {端} HP, 後退: シミー
