--- a/games/Street-Fighter/Six/characters/Elena/エレナの攻めの選択肢.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの攻めの選択肢.md
@@ -13,6 +13,9 @@ Sレオパード(g)は密着じゃないので1回しか刻めない。
 
 リュウの2MPでも遠めのMKに届かなくて相打ちになるので、
 
+コパンをガードされた後はガードよりグライドの方がいいかも。
+中足や中パンを潰して、コパンとかで暴れてても大したリスクはない。強攻撃を置いてくるならHP差し返しから3600。
+
 ## 2LP, 2LK, 2LP: 1
 
 ジャストパリィの仕様変更に合わせて、上段から入って下段で崩すコンボ。
