--- a/games/Street-Fighter/Six/characters/Elena/エレナの特徴.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの特徴.md
@@ -16,6 +16,27 @@
 - 対空無敵技がある
 - 技の発生が遅い
 
+## 技の長さ
+
+- 2HP
+- 2LP
+- 2LK
+- MK
+- LK
+- 弱グライド
+- 2MP = {屈} MP
+- {屈} HP
+- 2MK = 6MK = {立} MP = {立} HP = ODグライド
+- 2HK
+- 6HP
+- ハーベスト
+- レオパード
+- J.HK
+- マレット
+- Sハーベスト
+- Sレオパード
+- Sマレット
+
 ## ガードさせて有利になる技
 
 - MK: +1
