--- a/games/Street-Fighter/Six/characters/Elena/エレナの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの練習メニュー.md
@@ -4,11 +4,9 @@
 （ダミー設定 > 起き上がり: ランダム）
 
 - 6HP-HP-HP
-  - 強リンク, {その場受け身/端}, 前投げ
-  - 中リンク, ガード
+  - 中リンク, 6HP, ...
+  - 中リンク, 後退
 - 6HP(g), ガード
-
-端まで中リンクで届くなら中リンクの方がいい。強は+2なのでバクステコパンが確定。
 
 ## 弱攻撃のコンボ
 
