--- a/shared/human/mind/心.md
+++ b/shared/human/mind/心.md
@@ -51,3 +51,7 @@ mind は「いつも考えている、気にしている」イメージ。
 心は曖昧であやふやなものだ。それはそもそも心が「変化する」ための機構に過ぎないから。変化するための機構だからこそ、常に変化して移ろっている。
 
 心は技を正しく使うこと。
+
+弱いのは本当に心なのかな？
+
+心が弱いって言ってる人はその前に頭が弱い。自分に言ってる人も他人に言ってる人も。
