--- a/games/Street-Fighter/Six/characters/Elena/エレナの対策.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの対策.md
@@ -7,7 +7,11 @@
 
 ### 差し合いの概要
 
-しゃがみ攻撃への差し返しが弱い。2MKはキャンセルできないし、立ってないと派生も空振りになる。
+しゃがみ攻撃への差し返しが弱い。
+2MKはキャンセルできないし、立ってないと派生も空振りになる。
+2MPも当たりづらかったり、MP-MPも立ってないと当たらない上にMP自体もしゃがんでいると当たりづらい。
+
+エレナは上の方の当たり判定が見た目より後ろにあるので、足元や膝のあたりが長い技で差し返すと差し返しやすい。ルークの中パンとか。
 
 ### 差し合いの距離
 
