--- a/games/Street-Fighter/Six/characters/Elena/エレナの立ち回り.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの立ち回り.md
@@ -14,6 +14,8 @@ MPも発生が早くて長い。
 
 リンクシンクが弾抜けに使えるけど、見てからというよりはとりあえず転がっておかないと間に合わない。普通に差し合いが強いので、無理して転がる必要もない。
 
+生のリンクシンクもたまに見せたい。単に弱で転がってもいいし、レオパードなら発生も早いし長い。
+
 ## 差し合いの距離
 
 6HPがギリギリ当たる間合いでいい。
