--- a/games/Street-Fighter/Six/characters/Elena/エレナのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナのコンボ.md
@@ -208,12 +208,14 @@ MKは近くないと当たらない。
 - HP-HP, OD昇竜: 2880
 - HP-HP, ODホーン: 2560
 - {端} HP-HP, ODホーン, 強昇竜: 3400
-- HP-HP, SA2: 3840
-- HP-HP, SA2(H): 3160
+- {端} HP-HP, ODホーン, SA1, 強昇竜: 3880
+- HP-HP, SA2: 3840 (3160)
+- HP-HP, SA1, SA1, 強昇竜: 3860
 - HP-HP, ODホーン, SA2: 4240
 - HP-HP, ODホーン, SA3: 4560
 
-昇竜は近くないと届かない。
+昇竜やSA1は近くないと届かない。
+安定はODホーン。
 
 ## HP(pc)
 
@@ -382,7 +384,7 @@ MK-HK, ODホーンはすっぽ抜けるので注意。
 
 - SA1, 強昇竜
 
-2HP, 強スピンから直接ホーンSA3は行けないので、DR 2MPを挟むといい。
+地上の強スピンから直接ホーンSA3は行けないので、DR 2MP, 強ホーンを挟むといい。
 HP(pc)-HP, DR 2HP, 強スピンみたいに浮いているとDR 2MPでも拾えないので、そっちは中央なら2MP、端なら2HPから中スピン-Sハーベストにするといい。
 
 体力が9割を切っていてリーサル以外ならヒーリングはほぼ出し得。
