--- a/games/Street-Fighter/Six/characters/Elena/エレナの攻めの状況.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの攻めの状況.md
@@ -32,6 +32,11 @@
 
 ## HP-HP, ODホーン: 42
 
+詐欺飛びのフレームだけど、中央の後方受け身にはギリギリ届かない。
+
+- ステップ 2回: +2
+- 強リンク: 投げ間合いの外で+4
+
 ## {空} DR 2HP, 強スピン, 強ホーン: 37
 
 端では中昇竜で追撃して起き攻めでいい。
