--- a/games/Street-Fighter/Six/characters/Elena/エレナの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの練習メニュー.md
@@ -69,6 +69,11 @@ ODグライド-6Pの後は中央でも詐欺飛びを狙える。
 - {立} MP-MP, 弱グライド(g), ガード
 - {屈} MP, ガード
 
+## 弱攻撃から伸ばすコンボ
+
+- 2LP, 2LP, CR 2LP, 2HP, 強スピン, 中ホーン
+- 2LP, 2LP, CR 2LP, 2HP, 強スピン, DR 2MP, 強ホーン, SA3
+
  <!-- ---- この辺りから優先度検討中 ---- -->
 
 ## 中段の崩し
