--- a/games/Street-Fighter/Six/system/対戦方式.md
+++ b/games/Street-Fighter/Six/system/対戦方式.md
@@ -1,7 +1,5 @@
 ## ランクマッチ
 
-MR1500はちょうど勝率50%くらい。
-
 ブロンズは、コンボか強い行動ができると勝てる。
 
 シルバーは、自分の強い行動を押し付けていく人が多い。
@@ -45,6 +43,8 @@ https://www.redbull.com/jp-ja/street-fighter-6-ranked-system
 全キャラマスターでもMR1800よりは易しい。2キャラ行けたらあとは流れでいける。1、2キャラ目が大変。
 
 ハイマス、MR 1600でも上位3%に入る。
+
+ゲームが長く続くほど、強い人が増えてランクは落ちやすくなる。
 
 ## カジュアルマッチ
 
