--- a/games/Street-Fighter/Six/tips/対戦環境.md
+++ b/games/Street-Fighter/Six/tips/対戦環境.md
@@ -1,12 +1,12 @@
 ## モニター
 
-PS5はVRR対応モニターでないとラグい。
+PS5はVRR対応モニターでないとオンラインじゃなくてもラグい。
 
 ## ネット回線
 
 回線が悪いと、コマが飛んで対空や間合い管理が難しい。
 差し合いが難しくなるので、間合いが間違っていたり遅れたりしても落とせる対空、近づかなくてもいい飛び道具があるキャラのほうが動きやすい。
-また、確反や差し返しも難しくなるので、守りの強いキャラのほうが動きやすい。
+いっそ荒らしキャラの方が動きやすいかも。
 
 回線が悪いなら、グラップはできるだけ避けたほうがいい。いっそ無敵技の方がマシ。
 
