--- a/games/Street-Fighter/Six/characters/Elena/エレナのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナのコンボ.md
@@ -296,6 +296,7 @@ MKは近くないと当たらない。
 
 モダンは生のハーベストにモダン補正が載るので180安い。
 
+- ハーベスト, 2HK: 1530
 - ハーベスト, 強昇竜: 1880
 - {端} ハーベスト, ODホーン, 強昇竜: 2440
 - ハーベスト, SA1, 強昇竜: 2540
