--- a/games/Street-Fighter/Six/characters/Elena/エレナの攻めの状況.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの攻めの状況.md
@@ -23,12 +23,18 @@
 
 ## 6MK-MK: 29
 
-- DR 6MK, MK
-- ## DR 2MK: 目押し
-  - ガード
+- DR 6MK-MK: 単発ヒット確認
+- DR 2MK: 目押し
 - DR 投げ: 目押し
-- ステップ, MP(+2): ヒットで+5、ガードで-1、カウンターでMKが入る、相手がしゃがみ攻撃を最速で出さなければ立ち状態
-- ステップ, 2MK(+1)-HK: 単発ヒット確認が必要
+- {端} DR 6MK, MK
+- ステップ
+  - {端} MP(+2): ヒットで2LP、ガードで-1、カウンターでMKが入る、相手がしゃがみ攻撃を最速で出さなければ立ち状態
+  - 2MK(+1)-HK: 単発立ちヒット確認が必要
+  - {端} 2MK(+1): ヒットで2LP、ガードで-3
+  - 6MK: 11F遅れ、中段
+- 前進, 6HP
+
+中央はラッシュ投げが比較的強いけど、目押しなので無理して攻めなくてもいい。
 
 ## HP-HP, ODホーン: 42
 
@@ -68,13 +74,16 @@
   - {その場受け身/端} 通常投げ
   - {後方受け身} 6HP: 短い技を潰す
   - {後方受け身} {強攻撃や無敵技}, HP: 差し返し
-- 中リンク, ガード: その場受け身でも投げ間合いの外で+4
+- 中リンク
+  - Sレオパード: ガードされても+1
+  - Sハーベスト: ガードされて-4だが後方受け身なら遠い、4F技とは相打ちでMKが入る
+  - Sマレット: 17F遅れ、中段
+  - ガード: その場受け身でも投げ間合いの外で+4
+  - 6HP: 後方受け身に先端当て狙い
+  - {端} 前投げ: バクステされても確定がない
 - {端} HP: +5
 - {端} HP, 後退: シミー
 - {端} J.HK: 7F詐欺
-- 弱/中リンク-Sレオパード: ガードされても+1
-- 中リンク-Sハーベスト: ガードされて-4だが後方受け身なら遠い、4F技とは相打ちでMKが入る
-- 中リンク-Sマレット: 中段
 
 端のHPフレーム消費は6HP-HP-HPの時点で相手が端に背をつけているくらいで使える。
 
