--- a/games/Street-Fighter/Six/characters/Elena/エレナの攻めの選択肢.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの攻めの選択肢.md
@@ -85,10 +85,13 @@ DR MK(+3)がヒットするとHP-HPも入る。
 
 4F技と相打ちの時は+11はあるので、2MPかMPでいい。
 
-## 6MK-MK: 16-20
+## 6MK: 16-20
 
-安いけど手軽な崩し。
+安いけど手軽な崩し。単発ヒット確認して6MK-MKまで。カウンターヒットなら6MK, 2LPでもいい。
 差し合いの中でも使える。
+
+反射神経が悪いとヒットを見て確認するのはかなり厳しい。
+当たってから判別するのではなく、1段目のボタンを押した時点でしゃがみ確認して入れ込んだら30Fくらい余裕がある。
 
 ## 6MK(+2): 21
 
