--- a/games/Street-Fighter/Six/characters/Elena/エレナの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの練習メニュー.md
@@ -1,16 +1,17 @@
-## 差し合いのヒット確認
+## 共通設定
 
 （ダミー設定 > ガード: ランダム）
-（ダミー設定 > 起き上がり: ランダム）
+（ダミー設定 > 起き上がり: 後方受け身）
+
+## 差し合いのヒット確認
 
 - 6HP-HP-HP
   - 中リンク, 6HP, ...
-  - 中リンク, 後退
+  - 中リンク, ガード
 - 6HP(g), ガード
 
 ## 弱攻撃のコンボ
 
-（ダミー設定 > ガード: ランダム）
 （反撃設定 > ガードリバーサル: 通常投げ 3Fディレイ）
 （反撃設定 > ガードリバーサル: 何もしない）
 
@@ -20,13 +21,11 @@
   - ガード
 - 2LP/2LK(g), 2LP, ガード
 
-間違えてガードなのに弱スピンが漏れたらSレオパードでキャンセルできるといい。
-
 ## 確反
 
 （反撃設定 > ダウンリバーサル: 通常投げ）
 （反撃設定 > ダウンリバーサル: 無敵技）
-（反撃設定 > ダウンリバーサル: 何もしない
+（反撃設定 > ダウンリバーサル: 何もしない）
 
 - HP(pc)-HP, DR 2MP, 中スピン-Sハーベスト, 弱ホーン, SA3
 - HP(pc)-HP, DR 2MP, 中スピン-Sハーベスト, 弱ホーン, 中リンク, ガード
@@ -34,7 +33,6 @@
 
 ## ジャンプ攻撃からのコンボ
 
-（ガード: ランダム）
 （反撃設定 > ダウンリバーサル: 無敵技）
 （反撃設定 > ダウンリバーサル: 何もしない）
 
@@ -57,45 +55,36 @@ ODグライド-6Pの後は中央でも詐欺飛びを狙える。
 
 ## 壁インパクト
 
-- DI(壁), 2MP, 中スピン-リンクMK, 弱ホーン, 中昇竜, LK
-  - MK(+1)
-  - 後退
+- DI(壁), 2MP, 中スピン-リンクMK, 弱ホーン, 中昇竜, DI, ...
 
-ガードも同じルートでいい。
+ヒットもガードも同じルートでいい。
 
-## 中央の差し合いに使うコンボ
+## キャンセルラッシュ
 
-- {立} MP-MP, 弱グライド-6P
-- {立} MP-MP, 弱グライド(g), ガード
-- {屈} MP, ガード
+（反撃設定 > ガードリバーサル: 4F技）
+
+- 2MP, CR MK, 2HP, 強スピン, 弱ホーン, [DR 2MP, 強ホーン, SA3]
+- {端} 2MP, CR MK, 2HP, 強スピン, 弱ホーン, 中昇竜, LK, 後退
+- 2MP(g), CR MK: 連続ガードで+5
+  - 前投げ: 最速は空振りするので、1F遅らせる
+  - 後退: シミー
 
 ## 弱攻撃から伸ばすコンボ
 
-- 2LP, 2LP, CR 2LP, 2HP, 強スピン, 中ホーン
+- 2LP, 2LP, CR 2LP, 2HP, 強スピン, 弱ホーン
 - 2LP, 2LP, CR 2LP, 2HP, 強スピン, DR 2MP, 強ホーン, SA3
+- {端} 2LP, 2LP, CR 2LP, 2HP, 強スピン, 弱ホーン, 中昇竜
 
  <!-- ---- この辺りから優先度検討中 ---- -->
 
 ## 中段の崩し
 
+（ダミー設定 > 相手の動作: しゃがみ）
+
 - 6MK-HK
-  - DR 6MK:
-  - DR 2MK: 目押しで重ねる
-
-## Sレオパードスナップを絡めた攻め
-
-（ダミー設定 > ガード: ランダム）
-
-- Sレオパード, ODホーン
-  - 弱リンク-Sレオパード, ...
-  - 弱リンク, 後退
-- {端} Sレオパード, ODホーン, 中昇竜
-  - LK, MK(+2), MK
-  - LK; 前投げ
-  - LK, 後退
-- Sレオパード(g)
-  - 2LP, 2LP, 弱スピン-リンク, ...
-  - 前投げ
+  - ステップ, 2MK
+  - ステップ, ガード
+- 6MK(g), ガード
 
 ## ラッシュ中下段からのコンボ
 
@@ -121,18 +110,6 @@ ODグライド-6Pの後は中央でも詐欺飛びを狙える。
   - 強リンク, 2LK, 2LP: 4F技と相打ち
 - 弱グライド(g), ガード
 
-## 差し合いの立ち確認
-
-（ダミー設定 > ガード: ランダム）
-（ダミー設定 > ガード切り替え: ランダム）
-
-- {立} 2MK-HK, 弱グライド-6P, リンク, ...
-- {立} 2MK-HK, 弱グライド(g), ガード
-- {立} MP-MP, 弱グライド-6P, リンク, ...
-- {立} MP-MP, 弱グライド(g), ガード
-- {屈} 2MK, ガード
-- {屈} MP, ガード
-
 ## 中段の単発ヒット確認
 
 （ダミー設定 > ガード: ランダム）
@@ -141,54 +118,6 @@ ODグライド-6Pの後は中央でも詐欺飛びを狙える。
 - 6MK-MK, DR 6MK(g), ガード
 - 6MK-MK, DR 前投げ
 - 6MK(g), ガード
-
-## Sハーベストサークルを絡めた攻め
-
-（ダミー設定 > ガード: ランダム）
-
-- Sハーベスト, 弱ホーン
-  - 弱リンク-Sレオパード, ...
-  - 強リンク-マレット
-  - 弱リンク, 後退
-- Sハーベスト(g), ガード: -4なので注意
-
-## 弱攻撃の攻め
-
-- 2LK, 2LP, 弱グライド-6P, 弱リンク, ...
-- 2LK, 2LP, 弱グライド
-- 2LK, 2LP, 弱スピン-リンク
-  - 弱リンクS-LK, ODホーン
-    - 弱リンクS-LK, ...
-  - 弱リンクS-MK, 弱ホーン
-    - 弱リンクS-LK, ...
-  - 弱リンクS-HK, 2LP, 2LP, 弱スピン-リンク, ...
-- 2LK, 2LP, 弱スピン-リンクMK, 中ホーン
-- 2LK, 2LP, 弱スピン-リンクHK
-- リンクS-LK, ODホーン
-  - 弱リンクS-LK
-  - 弱リンク, 後退
-- リンクS-LK(g)
-  - 2LK, 2LP, 弱スピン-リンクLK, ...
-  - 2LK(g), 2LP, ガード
-  - 前投げ
-- リンクS-HK, 2LP, 2LP, 弱スピン
-  - ...-リンクLK
-  - ...-リンクHK
-  - ...-リンク, 前投げ
-- リンクS-HK(g), 2LK, 2LP, ...
-
-## 詐欺飛びの練習
-
-（ダミー設定 > ガード: ランダム）
-（ダミー設定 > 起き上がり: ランダム）
-（反撃設定 > ガードリバーサル: 無敵技）
-（反撃設定 > ガードリバーサル: 何もしない）
-
-- J.HK, 2MP, ODグライド-6P
-  - J.HK, 2MP, ODグライド-6P, ...
-  - {端} J.HK, MK-HK, 弱グライド-6P, J.HK, ...
-  - {無敵技} J.HK, ガード, HP(pc)-HP, ...
-- {端} J.HK, MK-HK, 弱グライド-6P, J.HK, ...
 
 ## SA3
 
@@ -226,19 +155,9 @@ ODグライド-6Pの後は中央でも詐欺飛びを狙える。
 - 2MP(g), CR MK, 後退, {無敵技}, HP(pc)-HP, DR 2HP, 強スピン, 強ホーン
 - 2MP(g), CR MK, 後退, {通常投げ}, MP, MK-HK, ODスピン-Sハーベスト, 中ホーン, SA3
 
-## ジャンプ攻撃からのコンボ
-
-- J.MK/J.HK, 2MP, ODグライド-6P, J.HK, ...
-- {端} J.MK/J.HK, MK-HK, 弱グライド-6P, J.HK, ...
-- J.MK, MK-HK, 強ホーン, ステップ, DR 2MK, MK-HK, ...
-- J.MK(g), MK, 2LP, 弱スピン-リンク, ...
-- J.MK(g), MK(g), 2LP, 2LP, 弱スピン-リンク, ...
-- J.MK(g), MK(g), 2LP(g), 2LP, ガード
-- J.MK(g), MK(g), 通常投げ
-
-めくりで狙う。
-
 ## 端の詐欺飛び
+
+端ではノーゲージでも詐欺飛びできる。
 
 （ダミー設定 > ガード: ランダム）
 （反撃設定 > ダウンリバーサル: 無敵技）
