--- a/games/Street-Fighter/Six/characters/Elena/エレナのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナのコンボ.md
@@ -238,7 +238,7 @@ MKは近くないと当たらない。
 - {端} HP(pc)-HP, DR 2HP, 強スピン-Sハーベスト, 弱ホーン, ODホーン, SA3: 5900
 
 遠いとDR 2HPが当たりにくいので、2MPで妥協してもいい。
-中央ではDR 2MPの方が高いけど、端だと弱ホーン, 強昇竜が入らないのでDR 2HPの方が高い。
+中央ではDR 2MPの方が高いけど、端だと強昇竜が入らないのでDR 2HPの方が高い。
 
 中央のHP(pc)-HP, DR 2MP, 中スピン-Sハーベストがたまにすっぽ抜けることがあるのなんでだろう？
 
