--- a/games/Street-Fighter/Six/characters/Elena/エレナの攻めの状況.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの攻めの状況.md
@@ -251,7 +251,8 @@
 
 ## Sレオパード: 48
 
-追撃をミスったり、中央でODホーンのゲージを温存したりするならこっち。
+中央で起き攻めするならODホーンで追撃しない方が状況はいい
+中央でSA2がなかったらODホーンで追撃しても安いので、起き攻めした方がいい。
 
 - ステップ 2回: 投げ間合いの外で+8
   - MK(+3), 2MP: ガードされても2MPと4F技が相打ち
