--- a/games/Street-Fighter/Six/characters/Elena/エレナの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの練習メニュー.md
@@ -6,8 +6,9 @@
 ## 差し合いのヒット確認
 
 - 6HP-HP-HP
-  - 中リンク, 6HP, ...
+  - 中リンク-Sレオパード(g), 2LP, 弱グライド
   - 中リンク, ガード
+  - {端} 中リンク, 前投げ
 - 6HP(g), ガード
 
 ## 弱攻撃のコンボ
@@ -18,7 +19,7 @@
 - 2LP/2LK, 2LP, 弱スピン-リンク
   - Sマレット, 2LP/2LK, 2LP, 弱スピン-リンク, ...
   - Sマレット(g), 前投げ
-  - ガード
+  - ガード, 前投げ
 - 2LP/2LK(g), 2LP, ガード
 
 ## 確反
@@ -74,6 +75,13 @@ ODグライド-6Pの後は中央でも詐欺飛びを狙える。
 - 2LP, 2LP, CR 2LP, 2HP, 強スピン, 弱ホーン
 - 2LP, 2LP, CR 2LP, 2HP, 強スピン, DR 2MP, 強ホーン, SA3
 - {端} 2LP, 2LP, CR 2LP, 2HP, 強スピン, 弱ホーン, 中昇竜
+
+## Sレオパードを使った攻め
+
+- Sレオパード
+  - ステップ 2回, 前進, 前投げ
+  - ステップ 2回, 前進, 後退: シミー
+  - {端} ODホーン, 中昇竜, DI
 
  <!-- ---- この辺りから優先度検討中 ---- -->
 
