--- a/games/Street-Fighter/Six/characters/Elena/エレナのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナのコンボ.md
@@ -24,12 +24,15 @@
 - 2LP, 2LP, CR 2LP, 2HP, 強スピン, DR 2MP, 強ホーン: 2000
 - {端} 2LP, 2LP, CR 2LP, 2HP, 強スピン, 弱ホーン, 強ホーン: 2016
 - {立} 2LP, 2LP, ODホーン, OD昇竜: 2180
-- 2LP, 2LP, SA1, 強昇竜: 1852
+- 2LP, 2LP, SA1, 強昇竜: 2180
 - {立} 2LP, 2LP, ODホーン, SA1, 強昇竜: 2380
 - {立} 2LP, 2LP, ODホーン, SA2: 2780
+- 2LP, 2LP, CR 2LP, 2HP, 強スピン, SA2: 2749 (h:2409)
 - 2LP, 2LP, CR 2LP, 2HP, 強スピン, DR 2MP, ODグライド-6P, SA2: 3069
 - 2LP, 2LP, SA3: 2779
 - {立} 2LP, 2LP, 弱ホーン, SA3: 3310
+- 2LP, 2LP, CR 2LP, 2HP, 強スピン, SA3: 3629
+- 2LP, 2LP, CR 2LP, 2HP, 強ホーン, SA3: 3671
 - 2LP, 2LP, CR 2LP, 2HP, 強スピン, DR 2MP, 強ホーン, SA3: 4000
 
 ## 2LP(+4)
@@ -92,6 +95,7 @@ ODグライドは安定する。
 - 2MP, CR MK, 2HP, 強スピン, 中ホーン: 2781
 - 2MP, CR MK, 2HP, 強スピン, DR 2MP, 強昇竜: 3005
 - {端} 2MP, CR MK, 2HP, 強スピン, 弱ホーン, 強昇竜: 3089
+- 2MP, CR MK, 2HP, 強スピン, DR 2MP, 弱リンク-ハーベスト, 強昇竜: 3122
 - 2MP, CR MK, 2HP, 強スピン, DR 2MP, SA1, 強昇竜: 3181
 - 2MP, CR MK, 2HP, 強スピン, DR 2MP, CR 2HP, SA1, 強昇竜: 3453
 - 2MP, CR MK, 2HP, 強スピン, SA2: 3453
@@ -272,13 +276,17 @@ MKは近くないと当たらない。
 
 - Sレオパード, ODホーン: 2400
 - {端} Sレオパード, 強昇竜: 2600
-- {端} Sレオパード, ODホーン, 強昇竜: 3240
+- {端} Sレオパード, DR 2LP, 強スピン, 中ホーン, 中昇竜: 3291
+- {端} Sレオパード, ODホーン, 強昇竜: 3380
+- {端} Sレオパード, DR 2LP, CR HP-HP, DR 2HP, 中スピン-Sハーベスト, 弱ホーン, 強昇竜: 3960
 - {端} Sレオパード, SA1, 強昇竜: 3660
 - {端} Sレオパード, ODホーン, SA1, 強昇竜: 4040
 - {端} Sレオパード, ODホーン, SA1, OD昇竜: 4120
+- {端} Sレオパード, DR 2LP, CR HP-HP, DR 2HP, 中スピン-Sハーベスト, SA1, 強昇竜: 4225
 - Sレオパード, SA2: 4000
 - Sレオパード, ODホーン, SA2: 4360
 - Sレオパード, SA3: 4800
+- {端} Sレオパード, DR 2LP, CR HP-HP, DR 2HP, 中スピン-Sハーベスト, 中ホーン, SA3: 5873
 
 ## Sハーベスト
 
