--- a/games/Street-Fighter/Six/characters/Elena/エレナの攻めの状況.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの攻めの状況.md
@@ -12,6 +12,24 @@
   - 後退: シミー
   - 2LK, 2LP
   - MK, 2LP
+- {端} 弱リンク
+  - Sレオパード
+  - マレット(+2): ヒットすると2LP, 2LPが入る、ガードされると-1で投げ間合い
+  - 後退: シミー
+- {端}
+
+## {端} +42
+
+- {端} J.HK
+- {端} 強リンク, 前投げ
+- {端} 中リンク, MK(+1): 持続当て
+- {端} 弱リンク, 後退: シミー
+
+## MK(+3)(g): 4
+
+- MK, 2LP
+- 前投げ
+- 後退: シミー
 
 ## MK-HK, 中スピン-リンク-リンク: 10
 
@@ -98,6 +116,8 @@
 
 ## 2HK(pc): 46
 
+- 強リンク, MK(+3)
+
 ## DR 2LP(g): 3
 
 ## DR MK(g): 5
@@ -162,7 +182,7 @@
   - 6MK: 中段
   - 前進, 2LK, 2LP: 下段
   - DR MK(+3), 2HP
-- 弱リンク:
+- 弱リンク: +11
   - MP(+3): ガードでも+1、その場受け身にはMKが入る、カウンターなら後方受け身でもMP-MPか2MPが入る
   - マレット(+2): 中段、ヒットで+4、ガードは-1で投げ間合いか後方受け身なら外
   - 2MK: 下段、単発立ち確認が必要
@@ -190,11 +210,14 @@
 
 ## スピン-リンク: -3
 
-- Sマレット: 14F遅れ、4F技でも空中食らい
+端の中スピンは詐欺飛びできるので詐欺飛びした方がいい。
+強スピンは中央でも起き攻めが強力だし、追撃すれば火力も出る。
+
 - Sレオパード/Sハーベスト: 暴れ潰し
 - ガード: -3 (無敵技やインパクト読み)
 - 前投げ: 8F遅れ、パリィやインパクトしてくる相手への対策
-- 2LK: 7F遅れ
+- 2LK: 7F遅れ、下段
+- Sマレット: 14F遅れ、中段、4F技でも空中食らい
 
 まずはマレットから。
 相手が暴れても空中判定で軽く済むことが多いし。
@@ -235,17 +258,20 @@
 
 ## 強スピン: 52
 
-基本的に追撃した方がいい。追撃しないと火力が落ちすぎる。
-端ではノーゲージ、中央でもDR 2MPから追撃できる。
+中央では状況が優秀。
+端では昇竜〆の状況が優秀なので追撃した方がいい。
 
 - ステップ, DR 6MK(+2)
 - ステップ, ステップ, 前進, 通常投げ
 
-## {端} 強スピン, 強昇竜: 26
+## {端} 強スピン, 弱ホーン, 強昇竜
 
-## {端} 強スピン, 弱ホーン: 40
+## 強スピン, 弱ホーン: 40
 
-## {端} 強スピン, 中ホーン: 37
+## 強スピン, 中ホーン: 37
+
+- ステップ, DR MK(+1), 2MP, 弱グライド
+- 弱リンク-Sレオパード: 4F遅れ
 
 ## {端} 強スピン, SA1: 47
 
@@ -273,10 +299,12 @@
 
 フレーム的には微有利だけど、相手が後退すると投げもコアコパも空振りするのでかなり弱い。
 
+- 前投げ: 4F技に負ける、先端だと届かない
 - MK, 弱グライド: 5F遅れ
 - 2LP, 弱グライド: 2LP(g), 弱グライドだと間が11F、2LPがヒットすると無敵技以外で割り込めない
 - 後退: シミー
 - 2LP, 2LP: ガードされると届かない
+- 2LK, 2LP: 後退されると届かない
 - MK-HK, 弱グライド: 中央ではガードされないと届かない
 
 ## Sマレット: 4
@@ -299,7 +327,9 @@ Sマレット(g)と基本的に同じでいい。
 
 - ステップ, DR MK
 - ステップ, DR 2MK
-- {端} 弱リンク, MK(+2), MK: 持続当て
+- {端} 弱リンク, MK(+3): 持続当て
+- {端} 2LK, 6MK(+2): 中段持続当て
+- {端} 2LK, LK, 前投げ
 
 ## 中昇竜: 25-26
 
@@ -316,7 +346,7 @@ Sマレット(g)と基本的に同じでいい。
 ## {端} 強昇竜: 22-23
 
 - 強昇竜
-- {端} 弱ホーン, 強昇竜
+- {端} 強スピン, 弱ホーン, 強昇竜
 
 など。
 
@@ -324,6 +354,12 @@ Sマレット(g)と基本的に同じでいい。
 - {端} LK, 後退: シミー
 
 中央では離れすぎて何もできない。
+
+## {端空} 強昇竜: 22
+
+状況としては、
+
+- 強スピン, 弱ホーン, 強昇竜
 
 ## {空} 弱ホーン, 強昇竜: 22
 
