--- a/games/Street-Fighter/Six/characters/Elena/エレナの攻めの選択肢.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの攻めの選択肢.md
@@ -61,9 +61,12 @@ MK, 2LPが届かない状況とかで入れ込み。
 
 端でMK, 2LPのヒット確認ができない時に便利。
 
-## MK(+1): 7-8
+## MK(+1): 6-8
 
 MK(+1), MKが繋がるのでヒット確認しやすい。
+ガードされても+2以上あるので、投げが入る。MK(+3)なら下がれる。
+
+MKの持続当てはド密着が強い。
 
 ## 2MP, 弱グライド: 4-9
 
@@ -81,9 +84,10 @@ DR MK(+3)がヒットするとHP-HPも入る。
 
 ## DR 2MK: 16-21
 
-ガードされても五分で、ヒットすると+8になる。MKか、遠かったらMPか2MPからコンボが入る。
+ガードされて五分なのが弱い。
+ヒットすると+8なので、離れていてもいいように2MP, 弱グライドが無難。
 
-4F技と相打ちの時は+11はあるので、2MPかMPでいい。
+4F技と相打ちの時も+11はある。2MPでいい。
 
 ## 6MK: 16-20
 
