--- a/games/Street-Fighter/Six/characters/Elena/エレナの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの練習メニュー.md
@@ -19,7 +19,7 @@
 - 2LP/2LK, 2LP, 弱スピン-リンク
   - Sマレット, 2LP/2LK, 2LP, 弱スピン-リンク, ...
   - Sマレット(g), 前投げ
-  - ガード, 前投げ
+  - 前投げ
 - 2LP/2LK(g), 2LP, ガード
 
 ## 確反
@@ -62,13 +62,20 @@ ODグライド-6Pの後は中央でも詐欺飛びを狙える。
 
 ## キャンセルラッシュ
 
+（反撃設定 > ダウンリバーサル: 4F技）
 （反撃設定 > ガードリバーサル: 4F技）
 
-- 2MP, CR MK, 2HP, 強スピン, 弱ホーン, [DR 2MP, 強ホーン, SA3]
-- {端} 2MP, CR MK, 2HP, 強スピン, 弱ホーン, 中昇竜, LK, 後退
+- 2MP, CR MK, 2HP, 強スピン
+  - ステップ 2回, 前進, 前投げ
+  - ステップ 2回, 前進, 後退: シミー
+- {端} 2MP, CR MK, 2HP, 強スピン, 弱ホーン, 強昇竜
+  - LK, 前投げ
+  - LK, 後退: シミー
 - 2MP(g), CR MK: 連続ガードで+5
   - 前投げ: 最速は空振りするので、1F遅らせる
   - 後退: シミー
+
+4F技で割り込まれないように練習する。
 
 ## 弱攻撃から伸ばすコンボ
 
