--- a/games/Street-Fighter/Six/characters/Elena/エレナのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナのコンボ.md
@@ -51,6 +51,12 @@
 
 - 2LK, 2LP, CR 2LP, 2HP, 強スピン, 中ホーン: 1829
 
+## 2LK(+4)
+
+- 2LK(+4), MK-HK, 強ホーン: 1660
+- {端} 2LK(+4), MK-HK, 弱グライド-6P: 1660
+- {端} 2LK(+4), MK-HK, 弱ホーン, 強昇竜: 2100
+
 ## MP(+4)
 
 - MP(+4), MK-HK, 強ホーン: 2330
@@ -225,8 +231,8 @@ MKは近くないと当たらない。
 
 - HP(pc)-HP, 強昇竜: 2880
 - HP(pc)-HP, 強ホーン: 2800
-- HP(pc)-HP, DR 2MP, 中スピン-Sハーベスト, 中ホーン: 3689
 - {端} HP(pc)-HP, 弱ホーン, 強昇竜: 3480
+- HP(pc)-HP, DR 2MP, 中スピン-Sハーベスト, 中ホーン: 3689
 - {端} HP(pc)-HP, DR 2HP, 中スピン-Sハーベスト, 弱ホーン, 強昇竜: 4133
 - HP(pc)-HP, SA1, 強昇竜: 3720
 - HP(pc)-HP, ODスピン-Sハーベスト, SA1, 強昇竜: 4020
@@ -236,7 +242,6 @@ MKは近くないと当たらない。
 - HP(pc)-HP, ODスピン-リンクMK, SA2: 4420
 - {端} HP(pc)-HP, DR 2HP, 強スピン-Sハーベスト, 弱ホーン, ODホーン, SA2: 5020
 - HP(pc)-HP, 強ホーン, SA3: 4800
-- {端} HP(pc)-HP, DR 2HP, 強スピン, 強ホーン, SA3: 5558
 - HP(pc)-HP, DR 2MP, 中スピン-Sハーベスト, 中ホーン, SA3: 5689
 - {端} HP(pc)-HP, DR 2HP, 中スピン-Sハーベスト, 中ホーン, SA3: 5825
 - {端} HP(pc)-HP, DR 2HP, 強スピン-Sハーベスト, 弱ホーン, ODホーン, SA3: 5900
