--- a/games/Street-Fighter/Six/characters/Elena/エレナの攻めの選択肢.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの攻めの選択肢.md
@@ -28,22 +28,13 @@ Sレオパード(g)は密着じゃないので1回しか刻めない。
 ## MK: 2-8
 
 - MK, 2LP, ...: ヒット確認は簡単だけど安い、無敵技以外で割り込めない
-- MK-HK: ヒット確認は難しめ
-- MK(g), 2LP, 2LP, ...
-- MK(g), 2LK, 2LP, ...
-- MK(g), 通常投げ
+- MK, 弱グライド: 入れ込み、ガードされても-3で無敵技以外で割り込めない
 
 ヒット確認して2LPやLKに繋いだり、MK-HKのTCも何とか間に合う。
 ガードされても+1から2LP, 2LPまで入る。
 
 ヒット時はできればMK-HKが高いけど猶予は少ない。
 2LPやLKの方がヒット確認は簡単。
-
-## MK, 弱グライド: 2-8
-
-ガードされても無敵技以外で割り込めない。-3なので確反もない。
-
-MK, 2LPが届かない状況とかで入れ込み。
 
 ## MK-HK: 2-8
 
@@ -75,6 +66,14 @@ MKの持続当てはド密着が強い。
 ガードされても無敵技以外で割り込めず、-3なので確反がない。
 
 キャンセルできる技からとりあえず振っておく技。単発確認して派生すると起き攻めできる。
+
+## DR 2LK: 13-17
+
+DR 2MKよりも攻め継続しやすい。
+ガードされても+3なので、MKや投げが埋まるし、MK, 弱グライドも使える。
+
+- MK: 入れ込みでもいい
+- 投げ: ヒットしていると空振り
 
 ## DR MK: 15-19
 
