--- a/games/shogi/将棋.md
+++ b/games/shogi/将棋.md
@@ -11,3 +11,5 @@ AIの将棋はもはや薄い囲いから先に入玉してそのまま押しつ
 将棋では、駒を切っていいかどうか判断するために、相手に渡していいかどうかも考える。詰みや守りに必要かどうかだけでは足りない。相手の攻めや守りも考える。
 
 角を当てやすくて、攻めやすく守りやすいのがお互いの4筋と6筋。戦いになりやすい。右四間飛車なんかは分かりやすく4筋を攻めてる。
+
+女性の棋士がいないというか、女性が将棋で弱いのは母数が少ないから。格ゲーもそうだった。
