--- a/shared/achievement/優先順位.md
+++ b/shared/achievement/優先順位.md
@@ -30,3 +30,5 @@ https://note.com/kenwagatsuma/n/naac8f4fa088c
 一番を決めようと思ったら一番以外は全部二番以下になる。それができないと中途半端になる。
 
 窓が割れているのに鍵をつけても意味がない。
+
+何かを目指すなら、優先順位をつけないといけない。一時的に何かのパラメータが悪くなっても優先すべきパラメータが伸びているならそのまま進まないといけない。
