--- a/shared/finance/tips/利益を追求する.md
+++ b/shared/finance/tips/利益を追求する.md
@@ -7,3 +7,5 @@
 収益のためには自分たちで価格を決められることが重要。価格決定力。ブランドであったり、製品の独自性であったり。
 
 安く買って高く売るには、育てるのが確実。
+
+勝率50%が51%になるだけで十分に利益が出ることって結構ある。その辺りがAIとか推測の狙い目かも。
