--- a/shared/music/vocal/training/tips/リズムを取る.md
+++ b/shared/music/vocal/training/tips/リズムを取る.md
@@ -52,3 +52,6 @@ BPM 150とかになるとまず8拍で手拍子するのが困難。腕もげる
 リズムは特にスローで確認した方がいい。楽譜が手に入るならそれが一番。
 
 テンポの速い曲は遅れを取り戻そうとしてむしろ走り気味になりやすい。
+
+声や音程が不安定になるとリズムも不安定に聞こえる。
+音楽で重要なのはリズムなので、リズムを取るために発声や音程を安定させる。
