--- a/shared/voice/training/tips/声を出す.md
+++ b/shared/voice/training/tips/声を出す.md
@@ -254,3 +254,5 @@ https://youtu.be/OEjipkH95_0?si=9RxpD90fqQnpNSXy
 息を吸うように声を出す。
 特に喉の奥は広げて、いつでも息を吸えるようにする。なんなら吐いて吸うを繰り返して練習する。感覚としてはずっと息を吸ったまま、腹筋で吐く。
 特に、横隔膜を下げる力は抜かずに、腹筋だけ力を抜くと勝手に息が入ってくるようにする。
+
+軽い相槌のように「うんうん」の感覚で声を出す。最初は息が持たないかも。
