--- a/shared/voice/training/tips/喉を上げる.md
+++ b/shared/voice/training/tips/喉を上げる.md
@@ -1,3 +1,5 @@
-基本的にあえて喉を上げることはないけど、女声とか声を作る時に使うことはある。
+基本的にあえて喉を上げることはないけど、例外として女声とか声を作る時に使うことはある。
 
 喉の上がった硬い声を鼻声や裏声で柔らかくした声の出し方は女性の出し方に近い。まぁ、そういう出し方もあるけど、その人のフルスペックを使った声ではない。
+
+舌を上げて浅い位置で発音すると美空ひばりの軽い声みたいになる。喉も上がってる。
