--- a/shared/voice/training/tips/声を強くする.md
+++ b/shared/voice/training/tips/声を強くする.md
@@ -21,3 +21,5 @@ http://hira0888.life.coocan.jp/asu124.html
 手で筒を作って息を絞るとわかるように、ただ吸って吐くだけでもかなりの負荷がかかる。歌うときはこの感覚で歌うけど、吐く時は息を吐くというよりも内圧を高める感覚。息は細く、できるだけ吐かずに声帯で受け止めないといけない。
 
 横隔膜を下げることで息を強くして、腹筋をポンプのように使って細く吐く。喉は開いて声を止めずに響かせる。
+
+声が強いこと自体は別にいい。声を強くするために硬くなっていたら良くない。柔らかく強い声にする。
