--- a/games/Street-Fighter/Six/characters/Elena/エレナの攻めの選択肢.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの攻めの選択肢.md
@@ -25,7 +25,7 @@ Sレオパード(g)は密着じゃないので1回しか刻めない。
 
 下段始動。
 
-## MK: 2-8
+## MK: 2-5
 
 - MK, 2LP, ...: ヒット確認は簡単だけど安い、無敵技以外で割り込めない
 - MK, 弱グライド: 入れ込み、ガードされても-3で無敵技以外で割り込めない
@@ -35,6 +35,19 @@ Sレオパード(g)は密着じゃないので1回しか刻めない。
 
 ヒット時はできればMK-HKが高いけど猶予は少ない。
 2LPやLKの方がヒット確認は簡単。
+
+MKが持続当てしないとあんま強くない。かといって他に重ねる技もないんだよなぁ。
+
+## MK(+1): 6-8
+
+- MK(+1), MK-HK
+- MK(+1), MK, 2LP: ど密着のみ
+
+MK(+1), MKが繋がるのでヒット確認しやすい。
+ガードされても+2以上あるので、投げが入る。MK(+1)なら下がれる。
+
+MKの持続当てはド密着が強い。
+リンクやステップでフレーム消費するタイプが使いやすい。
 
 ## MK-HK: 2-8
 
@@ -51,13 +64,6 @@ Sレオパード(g)は密着じゃないので1回しか刻めない。
 ただ、1Fでも遅れると相打ちになって2MPが入る。
 
 端でMK, 2LPのヒット確認ができない時に便利。
-
-## MK(+1): 6-8
-
-MK(+1), MKが繋がるのでヒット確認しやすい。
-ガードされても+2以上あるので、投げが入る。MK(+3)なら下がれる。
-
-MKの持続当てはド密着が強い。
 
 ## 2MP, 弱グライド: 4-9
 
