--- a/games/Street-Fighter/Six/characters/Elena/エレナの特徴.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの特徴.md
@@ -102,3 +102,7 @@
 
 ヒーリングは基礎ダメージが850下がって1300回復する。
 ヒーリングには補正が乗らない。SA2のダメージが補正で40%になっていたら340しか下がらないので基本的にはヒーリングした方がいい。
+
+エレナの中足は強いけど確認が難しすぎる。
+
+SA1に無敵がないのでBOするのはまずい。あとSAゲージもSA1で回すというよりは、SA2やSA3で使っていく。
