--- a/shared/collaboration/organization/有能と無能の違い.md
+++ b/shared/collaboration/organization/有能と無能の違い.md
@@ -3,3 +3,8 @@
 組織内で「無能がいる」と思ったらマネジメントが無能、と思った方がいい。
 そもそも組織は適材適所に異動させて無能を作らないためのシステムだ。場合によっては解雇もする。
 適材適所の配置ができてない無能がマネジメントになっている。
+
+結果として、後世には無能とされるかもしれない。
+ただ、自分のできることをするしかない。
+
+弱く貧しいと、手段として殺人くらいしかできないこともある。
