--- a/shared/music/vocal/training/tips/キーを変えて歌う.md
+++ b/shared/music/vocal/training/tips/キーを変えて歌う.md
@@ -36,6 +36,8 @@ https://note.com/atano/n/n3c01c44d8bae
 特に最低音がC4から始まるような曲は1オク下でも最低音C3なら出しやすい。
 1オク下の場合はウィスパーボイスにすると気になりにくい。
 
+明るい歌は1オク下だと低すぎる。せめて-6、できれば-4までがいい。あと曲によっては-6より+6にした方が合うこともある。伴奏は+6で歌うのは-6。
+
 ## 練習
 
 ドレミファソファミレドをキー変えながら練習するとキーを変える練習にもなる。
