--- a/shared/voice/training/tips/声を育てる.md
+++ b/shared/voice/training/tips/声を育てる.md
@@ -22,3 +22,7 @@
 
 声をよくするのは野球で言えば球速160キロを目指すようなもの。
 自分の限界を超えた球を投げ続けることで成長するが、限界を越えればコントロールするのは難しくなる。成長の過程で楽な方に流れてはいけない。まずは制御できなくても限界を超えて、慣れてきたら制御する。小さく収まらない。
+
+歌よりも声を育てるのは、周りがリコーダーで難しい曲を弾こうとしている中で一人だけサックスやグランドピアノを使おうとしているようなもの。もちろんリコーダーにもリコーダーの良さがあるけど、自分のパフォーマンスの限界がリコーダーかどうかは鍛えてみないとわからない。
+
+自分という楽器がリコーダーだったらまだいいけど、カスタネットやトライアングルだったらまず楽器を替えないとできることが少なすぎる。
