--- a/shared/war/敵対.md
+++ b/shared/war/敵対.md
@@ -26,3 +26,5 @@ LoseWinの関係をLoseLoseに持っていく。
 物語ならいいけど、現実で決闘するほど敵対するなら殺した方がいい。そもそも決闘とは命を賭けるものだ。
 
 物語でも決闘で普通に殺し合うために命を賭ける宣誓をする手順を踏むといいかも。
+
+感情的には敵対してなくても派閥で敵対することもある。その場合は寝返りもありうる。
