--- a/shared/choice/frameworks/多数決.md
+++ b/shared/choice/frameworks/多数決.md
@@ -4,3 +4,6 @@
 ただ、多数決にもさまざまなバリエーションが考えられている。
 
 多数決は手間をかけずに必ず議決を取れるのが利点だが、できれば避けたい方法でもある。最大で50%は合意が得られない。議決と合意は違う。
+
+そもそも多数決は正しい民主主義ではない。
+民意の50%弱は捨てられるのだから。
