--- a/shared/collaboration/organization/tips/無能の扱い.md
+++ b/shared/collaboration/organization/tips/無能の扱い.md
@@ -51,3 +51,5 @@
 無能って見た目がいいと可愛いんだよね。それが厄介。
 
 悪意のある敵より無能な味方が危ないのは「近い」から。離せば危険性は低くなる。前線に放り出して使い捨てる。
+
+無能だから殺すのではなく、有能さを見せられるように死ぬような最前線に送る。それで有能なら生かせばいいし、無能なら死ぬ。
