--- a/games/Street-Fighter/Six/characters/Elena/エレナの攻めの状況.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの攻めの状況.md
@@ -1,9 +1,9 @@
 ## 特に重要な状況
 
-- 6HP-HP-HP
-- スピン-リンク
+- 6HP-HP-HP: 差し合いで頻出
+- スピン-リンク: 小技から頻出
 - {空} DR 2MP, 中スピン-Sハーベスト, 弱ホーン: 確反、インパクト系で頻出
-- {端} 中昇竜: 端のコンボの〆で頻出
+- {端} 弱/強昇竜: 端のコンボの〆で頻出
 
 ## {端} +39
 
@@ -267,7 +267,7 @@
 端の中スピンは詐欺飛びできるので詐欺飛びした方がいい。
 強スピンは中央でも起き攻めが強力だし、追撃すれば火力も出る。
 
-- Sレオパード/Sハーベスト: 暴れ潰し
+- Sレオパード: 暴れ潰し
 - ガード: -3 (無敵技やインパクト読み)
 - 前投げ: 8F遅れ、パリィやインパクトしてくる相手への対策
 - 2LK: 7F遅れ、下段
@@ -345,7 +345,7 @@
 
 フレーム的には微有利だけど、相手が後退すると投げもコアコパも空振りするのでかなり弱い。
 
-- 前投げ: 4F技に負ける、先端だと届かない
+- 前投げ: 4F技に負ける、スピンリンクやど密着のみ
 - MK, 弱グライド: 5F遅れ
 - 2LP, 弱グライド: 2LP(g), 弱グライドだと間が11F、2LPがヒットすると無敵技以外で割り込めない
 - 後退: シミー
