--- a/games/Street-Fighter/Six/characters/Elena/エレナの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの練習メニュー.md
@@ -92,6 +92,11 @@ ODグライド-6Pの後は中央でも詐欺飛びを狙える。
 
  <!-- ---- この辺りから優先度検討中 ---- -->
 
+## ラッシュ下段
+
+- DR 2LK, MK
+- DR 2LK, MK
+
 ## 中段の崩し
 
 （ダミー設定 > 相手の動作: しゃがみ）
