--- a/games/Street-Fighter/Six/characters/Elena/エレナの攻めの状況.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの攻めの状況.md
@@ -5,19 +5,6 @@
 - {空} DR 2MP, 中スピン-Sハーベスト, 弱ホーン: 確反、インパクト系で頻出
 - {端} 弱/強昇竜: 端のコンボの〆で頻出
 
-## {端} +39
-
-- {端} HP: +4
-  - 前投げ
-  - 後退: シミー
-  - 2LK, 2LP
-  - MK, 2LP
-- {端} 弱リンク
-  - Sレオパード
-  - マレット(+2): ヒットすると2LP, 2LPが入る、ガードされると-1で投げ間合い
-  - 後退: シミー
-- {端}
-
 ## {端} +42
 
 - {端} J.HK
@@ -34,6 +21,8 @@
 
 ## MK(+3)(g): 4
 
+投げとシミーを狙える。
+
 - MK, 2LP
 - 前投げ
 - 後退: シミー
@@ -48,13 +37,22 @@
 
 ## MK-HK, 弱ホーン: 40
 
+SA3があるか、中リンクで密着できる時以外は強ホーンでいい。
+
 - {密着} ステップ 2回, 2LP: 五分の攻め
+- {端} HP: +4
+  - 後退: シミー
+
+端では追撃した方がいい。
+ただ、追撃が入るか微妙な時は無難に起き攻めでもいい。
 
 ## MK-HK, 中ホーン: 38
 
 - 弱リンク-Sレオパード
 - 弱リンク-Sハーベスト: 4F遅れ、ガードされても後ろ受け身なら遠めの-4
 - 中リンク-マレット: 中段
+
+端では弱ホーンから追撃した方がいい。
 
 ## MK-HK, 強ホーン: 36
 
@@ -65,6 +63,10 @@
 - DR 後退: その場受け身でもシミー
 - 弱リンク-マレット: 中段
 - 弱リンク-Sレオパード: 5F遅れ
+
+中央でゲージがあるなら強ホーンでいい。
+
+端では弱ホーンから追撃した方がいい。
 
 ## MK-HK, 中スピン: 43
 
@@ -85,8 +87,7 @@
 
 ## 6MK-MK: 29
 
-- DR 6MK-MK: 単発ヒット確認
-- DR 2MK: 目押し
+- DR 2LK/2MK: 下段、目押し
 - DR 投げ: 目押し
 - {端} DR 6MK, MK
 - ステップ
@@ -109,6 +110,7 @@
 
 - ステップ 2回: +2
 - 強リンク: 投げ間合いの外で+4
+- {端} 詐欺飛び
 
 ## {空} DR 2HP, 強スピン, 強ホーン: 37
 
@@ -121,18 +123,27 @@
 
 ## {空} DR 2MP, 中スピン-Sハーベスト, 弱ホーン: 39
 
-6HP-HP-HPとほぼ同じ。
+中央ではSハーベストが後ろ受け身に先端当てになって確反がない。
+
 ただ、強リンクが+1なのでその場受け身に投げが弱い。様子見中心。
 
 端では中昇竜で追撃した方がいい。
 
+- 弱リンク-3Sレオパード: ガードされても+1密着
+- 弱リンク-Sハーベスト: 後方受け身には先端当てになって確反がない
 - ステップ, 前進, {その場受け身}, 通常投げ: 目押しで重ねる
 - ステップ, 前進, {その場受け身}, 後退: シミー
+- {端} HP: +4
+  - 後退: シミー
 
 ## {空} DR 2MP, 中スピン-Sハーベスト, 中ホーン: 37
 
-- DR 2MK/6MK/投げ: 目押し
+- DR 2LK/2MK/6MK/投げ: 目押し
+- DR 後退: シミー、後方受け身にはその場でガードの方がいい
 - ステップ, DR 2LK, MK
+- ステップ
+  - DR 2LK
+  - 6MK: 4F遅れ
 
 ## 6HP-HP-HP: 40
 
@@ -228,8 +239,6 @@
 中央でもわりと近くに落ちる。
 ステップからの攻めが多彩。
 
-端では2MP, 弱グライドよりもMK-HK, 弱グライドを狙いたい。
-
 - ステップ
   - 前進, 前投げ
   - 前進, 後退: シミー
@@ -246,11 +255,12 @@
   - 2LP, 2LP
   - 2LK, 2LP: 4F技と相打ちで-1くらい
   - 前投げ: 4F技に負ける
-- J.HK, 2MP, 弱グライド: 8F詐欺
-- 前J: 4F詐欺
+- J.HK: 8F詐欺
+- J: 4F詐欺
 - {端} HP: +4
-  - 前投げ
   - 後退: シミー
+
+端ではHPでフレーム消費して+4が強い。後退がシミーになる。
 
 ## ODグライド-6P: 42
 
@@ -309,6 +319,10 @@
 - ステップ, ステップ, 前進, 通常投げ
 
 ## {端} 強スピン, 弱ホーン, 強昇竜
+
+## {端} 強スピン, SA1, 弱昇竜: 42
+
+- 詐欺飛び
 
 ## 強スピン, 弱ホーン: 40
 
