--- a/games/Street-Fighter/Six/characters/Elena/エレナの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Elena/エレナの練習メニュー.md
@@ -6,10 +6,11 @@
 ## 差し合いのヒット確認
 
 - 6HP-HP-HP
-  - 中リンク-Sレオパード(g), 2LP, 弱グライド
-  - 中リンク, ガード
-  - {端} 中リンク, 前投げ
+  - ステップ, 前進, 6HP, ...
+  - ステップ, 前進, ガード
 - 6HP(g), ガード
+
+起き攻めは多少重なってなくてもいい。
 
 ## 弱攻撃のコンボ
 
@@ -28,8 +29,9 @@
 （反撃設定 > ダウンリバーサル: 無敵技）
 （反撃設定 > ダウンリバーサル: 何もしない）
 
-- HP(pc)-HP, DR 2MP, 中スピン-Sハーベスト, 弱ホーン, SA3
-- HP(pc)-HP, DR 2MP, 中スピン-Sハーベスト, 弱ホーン, 中リンク, ガード
+- HP(pc)-HP, DR 2MP, 中スピン-Sハーベスト, 中ホーン
+  - SA3
+  - DR 投げ
 - {端} HP(pc)-HP, DR 2MP, 中スピン-Sハーベスト, 弱ホーン, 中昇竜, LK, 後退
 
 ## ジャンプ攻撃からのコンボ
